fixed moving navbar brand on tablet devices

--- a/public/style.css
+++ b/public/style.css
@@ -287,6 +287,8 @@ a:hover {
     @media (max-width: 992px) {
         .navbar-brand {
             position: absolute;
+            margin-top: 10px;
+            top: 0%;
             left: 50%;
             transform: translateX(-50%);
         }
